# Mongolian-Language-gateway

./: .env.example  .gitignore  README.md  docker-compose.yml
datasets/benchmark/: GeneralMongolianBench-v1.jsonl  MongolianBankBench-v1.jsonl
datasets/processed/: lendex_500_sft.jsonl  sft_v2_train.jsonl  sft_v2_val.jsonl  sft_v3_train.jsonl  sft_v3_val.jsonl
docs/: benchmark_spec.md  data_governance.md  datagate_integration.md  lendex_integration.md  model_training_plan.md
services/mongolian-language-service/: Dockerfile  pyproject.toml
services/mongolian-language-service/app/: __init__.py  config.py  main.py  schemas.py
services/mongolian-language-service/app/glossaries/: lendex_finance.json
services/mongolian-language-service/app/modules/: __init__.py  cache.py  compliance.py  confidence.py  glossary.py  logging.py  pii_redaction.py
services/mongolian-language-service/app/providers/: __init__.py  base.py  mock_provider.py  openai_provider.py  vllm_provider.py
services/mongolian-language-service/app/routes/: chat.py  compliance_check.py  evaluate.py  extract.py  rewrite.py  translate.py
services/mongolian-language-service/tests/: test_lendex_sft_dataset.py  test_service.py
training/: __init__.py  requirements-train.txt
training/configs/: qwen3_32b_mn_dpo.yaml  qwen3_32b_mn_general_lora.yaml  qwen3_32b_mn_lendex_lora.yaml  qwen3_32b_mn_sft.yaml
training/evals/: __init__.py  judge_prompts.py  lendex_smoke_prompts_v3.json  metrics.py  scoring.py
training/scripts/: build_bank_benchmark.py  build_general_benchmark.py  build_lendex_sft_v2.py  (+14 more)
(+1 files in other folders)
